--- a/porto.html
+++ b/porto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link href="hamburgers/dist/hamburgers.css" rel="stylesheet">
+    <!-- <link href="hamburgers/dist/hamburgers.css" rel="stylesheet"> -->
 </head>
 
 <body>
