--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
             <a href="dev.html">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
-            <a href="#">SCO</a>
+            <a href="sco.html">SCO</a>
         </div>
     </div>
 
