--- a/main.html
+++ b/main.html
@@ -14,9 +14,10 @@
     <header id="main-header">
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
-            <span class="logo">
-                <h1 style="color: white;">"LOGO"</h1>
-            </span>
+            <div class="logo">
+                <!-- <h1 style="color: white;">"LOGO"</h1> -->
+                <img src="content/001logo.png" id="myLogo">
+            </div>
         </div>
     </header>
 
