--- a/main.html
+++ b/main.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <!-- <link href="hamburgers/dist/hamburgers.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -18,15 +17,9 @@
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
                 <img src="content/001logo.png" id="myLogo">
             </div>
+            <div class="headerplaceholder"></div>
         </div>
     </header>
-
-    <!-- hamburger button -->
-    <!-- <button class="hamburger hamburger--slider" type="button">
-        <span class="hamburger-box">
-          <span class="hamburger-inner"></span>
-        </span>
-      </button> -->
 
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
