--- a/main.html
+++ b/main.html
@@ -17,8 +17,7 @@
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
                 <img src="content/001logo.png" id="myLogo">
             </div>
-            <div class="headerplaceholder"></div>
-        </div>
+            <div class="headerplaceholder"></div></div>
     </header>
 
     <div id="myNav" class="overlay">
