--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header id="main-header">
+    <header class="main-header">
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
