--- a/sco.html
+++ b/sco.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
-    <header id="main-header">
+    <header class="main-header">
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
-            <span class="logo">
-                <h1 style="color: white;">"LOGO"</h1>
-            </span>
+            <div class="logo">
+                <!-- <h1 style="color: white;">"LOGO"</h1> -->
+                <img src="content/001logo.png" id="myLogo">
+            </div>
+            <div class="headerplaceholder"></div>
         </div>
     </header>
     <h2>SCO</h2>
