Added home hyperlink to logo

--- a/sco.html
+++ b/sco.html
@@ -16,7 +16,7 @@
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <img src="content/001logo.png" id="myLogo">
+                <a href="main.html"><img src="content/001logo.png" id="myLogo"></a>                
             </div>
             <div class="headerplaceholder"></div>
         </div>
