renamed "main.html" to "home.html"

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <a href="main.html"><img src="content/001logo.png" id="myLogo"></a>
+                <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>
             </div>
             <div class="headerplaceholder"></div></div>
     </header>
@@ -23,7 +23,7 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="main.html">HOME</a>
+            <a href="home.html">HOME</a>
             <a href="dev.html">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
