minor adjustment to hyperlinks

--- a/sco.html
+++ b/sco.html
@@ -30,7 +30,7 @@
             sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel pretium nec,
             consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem. Proin
             bibendum eros vel est iaculis faucibus.</p>
-        <p>place holder for target audience assignment</p>
+        <p>[place holder for target audience assignment]</p>
     </section>
 
     <br />
