--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PORTO</title>
+    <title>Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -24,7 +24,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="home.html">HOME</a>
-            <a href="dev.html">DEV</a>
+            <a href="#">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
             <a href="sco.html">SCO</a>
