minor adjustment to logo

--- a/sco.html
+++ b/sco.html
@@ -21,7 +21,7 @@
             <div class="headerplaceholder"></div>
         </div>
     </header>
-    <h2>SCO</h2>
+    <h2 style="text-align: center;">SCO</h2>
     <section id="Strategy">
         <h3>Strategy</h3>
         <h4>Target Audience</h4>
