--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
                 <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>
             </div>
-            <div class="headerplaceholder"></div></div>
+            <!-- <div class="headerplaceholder"></div></div> -->
     </header>
 
     <div id="myNav" class="overlay">
