--- a/sco.html
+++ b/sco.html
@@ -16,37 +16,46 @@
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>                
+                <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>
             </div>
-            <div class="headerplaceholder"></div>
-        </div>
+            <!-- <div class="headerplaceholder"></div></div> -->
     </header>
-    <h2 style="text-align: center;">SCO</h2>
-    <section id="Strategy">
-        <h3>Strategy</h3>
-        <h4>Target Audience</h4>
-        <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio, a mattis
-            lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis risus. Nunc
-            sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel pretium nec,
-            consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem. Proin
-            bibendum eros vel est iaculis faucibus.</p>
-        <p>[place holder for target audience assignment]</p>
-    </section>
+    <section class="content">
+        <section id="title">
+            <h2>SCO</h2>
+        </section>
 
-    <br />
+        <br />
 
-    <section id="Concepting">
-        <h3>Concepting</h3>
-        <section id="assignment1">
-            <h4>Visual Association</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum facilisis a
-                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat. Integer id
-                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu sed
-                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi pellentesque
-                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla felis.
-                    Pellentesque auctor tellus congue ornare fermentum.</p>
-                <p>[Placeholder for flipbook]</p>
+        <section class="strategy">
+            <h3>Strategy</h3>
+            <h4>Target Audience</h4>
+            <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio, a mattis
+                lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis risus. Nunc
+                sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel pretium nec,
+                consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem. Proin
+                bibendum eros vel est iaculis faucibus.</p>
+            <p>[place holder for target audience assignment]</p>
+        </section>
+
+        <br />
+
+        <section class="concepting">
+            <h3>Concepting</h3>
+            <section id="assignment1">
+                <h4>Visual Association</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
+                        facilisis a
+                        sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat. Integer id
+                        elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu sed
+                        volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
+                        pellentesque
+                        dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
+                        ultrices
+                        posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla felis.
+                        Pellentesque auctor tellus congue ornare fermentum.</p>
+                    <p>[Placeholder for flipbook]</p>
+            </section>
         </section>
     </section>
 
