--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="main-header">
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
@@ -20,6 +21,7 @@
             <!-- <div class="headerplaceholder"></div></div> -->
     </header>
 
+    <!-- OVERLAY MENU -->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
@@ -31,6 +33,8 @@
         </div>
     </div>
 
+    <!-- BODY -->
+    <!-- <div style="background: crimson;height: 500px;"><h1>Welcome</h1><p>test</p></div> -->
     <script src="js/main.js"></script>
 
 </body>
