Added script source for three.js

--- a/home.html
+++ b/home.html
@@ -35,6 +35,8 @@
 
     <!-- BODY -->
     <!-- <div style="background: crimson;height: 500px;"><h1>Welcome</h1><p>test</p></div> -->
+    
+    <!-- SCRIPT -->
     <script src="js/main.js"></script>
 
 </body>
