--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>
+                <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             </div>
             <div class="headerplaceholder"></div></div>
     </header>
@@ -54,7 +54,7 @@
         //set camera position
         camera.position.x = 0;
         camera.position.y = 0;
-        camera.position.z = 8;
+        camera.position.z = 6;
         // constructor for renderer with AA property
         var renderer = new THREE.WebGLRenderer({
             antialias: true
