--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>
+                <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             </div>
             <!-- <div class="headerplaceholder"></div></div> -->
     </header>
@@ -34,6 +34,7 @@
     </div>
 
     <!-- BODY -->
+    <a href="home.html"><img src="content/001logo.png" id="myLogo" style="height:auto ;width: auto;padding-left: 50px"></a>
     <!-- <div style="background: crimson;height: 500px;"><h1>Welcome</h1><p>test</p></div> -->
     
     <!-- SCRIPT -->
