--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Home</title>
     <meta charset="UTF-8">
@@ -13,10 +14,11 @@
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
+                <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
                 <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             </div>
-            <div class="headerplaceholder"></div>
+            <!-- <div class="headerplaceholder"></div> -->
         </div>
     </header>
 
