--- a/home.html
+++ b/home.html
@@ -36,128 +36,11 @@
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
-    <!-- general script -->
-    <script src="js/main.js"></script>
-    <!-- library for three js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
-    <!-- library for TweenMax animation plugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-
-    <!-- THREE.JS____________________________________________________________________________________________________________ -->
-    <script>
-        // constructor for scene
-        var scene = new THREE.Scene();
-
-        // constructor for persperctive camera with 75 FOV, size of browser window, render distance of the near/far plane 0.1 to 1000
-        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-
-        //set camera position
-        camera.position.x = 0;
-        camera.position.y = 0;
-        camera.position.z = 6;
-
-        // constructor for renderer with AA property
-        var renderer = new THREE.WebGLRenderer({
-            antialias: true,
-            alpha: true
-        });
-
-        //background color for renderer
-        //alpha channel enabled
-        renderer.setClearColor(0xffffff, 0)
-        // alpha chanel disabled
-        // renderer.setClearColor("#000000");
-
-        //size for the renderer based on window width and height
-        renderer.setSize(window.innerWidth, window.innerHeight);
-
-        //call a method to create <canvas> element
-        document.body.appendChild(renderer.domElement);
-
-        //auto resize canvas by listening to window resize event
-        window.addEventListener('resize', () => {
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            //re-adjust camera aspect ratio
-            camera.aspect = window.innerWidth / window.innerHeight;
-            //update camera everytime theres adjustment made
-            camera.updateProjectionMatrix();
-        })
-
-        // SPHERE
-        //define geometry
-        var geometry = new THREE.SphereGeometry(1, 10, 500);
-        //define material
-        var material = new THREE.MeshLambertMaterial({
-            color: 0x3399ff
-        });
-        //define mesh of a sphere with material
-        var mesh = new THREE.Mesh(geometry, material);
-        //set scale
-        mesh.scale.set(2, 2, 2);
-        //set position
-        mesh.position.set(0, 1, 0);
-        //add mesh to scene
-        scene.add(mesh);
-
-        //OCTAHEDRON
-        var octahedron = new THREE.OctahedronGeometry(1, 0)
-
-        var material1 = new THREE.MeshLambertMaterial({
-            color: 0xffffff
-        });
-        var octahedron1 = new THREE.Mesh(octahedron, material1)
-
-        //set position
-        octahedron1.position.set(-2.75, 3, 0);
-
-        // set rotation
-        octahedron1.rotation.set(1, 0, 1);
-
-        //set scale
-        octahedron1.scale.set(1, 1, 1);
-        scene.add(octahedron1);
-
-        //OCTAHEDRON 2
-        // var octahedronGeometry2 = new THREE.OctahedronGeometry(1,2)
-        // var octahedronMesh2 = new THREE.Mesh(octahedronGeometry2, material)
-        // octahedronMesh2.position.set=(1, 0, 1);
-        // scene.add(octahedronMesh2);
-
-        //lighting 
-        //PointLight(colour, intensity, distance, decay);
-        var light = new THREE.PointLight(0xffffff, 1, 100);
-
-        //setpos
-        light.position.set(-5, 3, 7);
-
-        //add light to scene
-        scene.add(light);
-
-        // function to fix render aspect ration on windows resize event
-        // var render = function() {
-        //     requestAnimationFrame(render);
-        //     renderer.render(scene, camera);
-        // }
-
-        // function to refresh the canvas every frame
-        var render = function refreshCanvas() {
-            requestAnimationFrame(render);
-
-            //Animate below this comment...
-
-            //Rotation per frame
-            octahedron1.rotation.y += 0.005;
-            mesh.rotation.y += 0.01;
-
-            //show things on scene
-            renderer.render(scene, camera);
-        }
-
-        render();
-    </script>
-
-    <a href="home.html"><img src="content/001logo.png" id="myLogo"
-            style="height:auto ;width: auto;padding-left: 50px"></a>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.module.js"></script> -->
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
