--- a/sco.html
+++ b/sco.html
@@ -16,7 +16,7 @@
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <a href="home.html"><img src="content/001logo.png" id="myLogo"></a>
+                <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             </div>
             <!-- <div class="headerplaceholder"></div></div> -->
     </header>
@@ -29,6 +29,7 @@
 
         <section class="strategy">
             <h3>Strategy</h3>
+            <article id="TargetAudience">
             <h4>Target Audience</h4>
             <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio, a mattis
                 lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis risus. Nunc
@@ -36,6 +37,7 @@
                 consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem. Proin
                 bibendum eros vel est iaculis faucibus.</p>
             <p>[place holder for target audience assignment]</p>
+            </article>
         </section>
 
         <br />
